# Axenix-Hack

./: .gitignore  Readme.md  docker-compose.yml  package-lock.json
backend/checkpoint-selector/: Dockerfile  checking_with_location.py  checking_without_location.py  main.py  pyproject.toml
backend/checkpoint-selector/airports/: list_airports.py  yandex_transport.py
backend/checkpoint-selector/config/: __init__.py  config.py
backend/checkpoint-selector/geo/: get_points.py  search_obj.py
backend/checkpoint-selector/locate_by_points/: point_locator.py  simplify_point_output.py
backend/checkpoint-selector/nearest_city/: nearest_city.py
backend/checkpoint-selector/pre_start/tables/: cities.py  staions_in_region.py
backend/checkpoint-selector/presentation/app/: models.py
backend/checkpoint-selector/presentation/app/routes/: get_version.py  locate_routes.py  unlocate_routes.py
backend/checkpoint-selector/trains/: yandex_schedule.py
client/: .prettierrc.json  index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/api/: api.ts
client/src/components/Button/: Button.module.css  index.tsx
client/src/components/Card/: Card.module.css  index.tsx
client/src/components/Icon/: Icon.module.css  index.tsx
client/src/components/Map/: Map.module.css  index.tsx
client/src/components/Modal/: Modal.module.css  index.tsx
client/src/components/Overlay/: Overlay.module.css  index.tsx
client/src/context/: ModalContext.tsx  PathContext.tsx  PointsContext.tsx  RouteContext.tsx  TransportContext.tsx
(+6 files in other folders)
